--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.2.2",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@hookform/resolvers": "^3.9.1",
@@ -17,11 +18,16 @@
     "@mui/material": "^6.1.8",
     "@mui/x-date-pickers": "^7.22.3",
     "@mui/x-date-pickers-pro": "^7.22.3",
+    "@swc/core": "^1.9.3",
     "@tanstack/react-query": "^5.61.0",
+    "@types/react-datepicker": "^7.0.0",
+    "@vitejs/plugin-react-swc": "^3.7.2",
     "axios": "^1.7.7",
     "date-fns": "3.2",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
+    "react-date-range": "^2.0.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "zod": "^3.23.8"
@@ -31,7 +37,6 @@
     "@hookform/devtools": "^4.3.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
