--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vitejs/plugin-react-swc": "^3.7.2",
     "axios": "^1.7.7",
     "date-fns": "3.2",
+    "gh-pages": "^6.2.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-date-range": "^2.0.1",
